--- a/docs/開発工程.md
+++ b/docs/開発工程.md
@@ -8,10 +8,13 @@
 - 業務分析
 
 **成果物**
-- ビジネスプロセス相関図
-- 業務機能構成表
+- [ビジネスプロセス関連図](https://pm-rasinban.com/wp-content/uploads/2021/02/f56ffeac2923661e92a636e8850b6d92.jpg)
 - 業務機能構成表
 - システム化業務フロー
+
+**有用なツール・ドキュメント**
+- [ビジネスプロセス関連図](https://pm-rasinban.com/wp-content/uploads/2021/02/f56ffeac2923661e92a636e8850b6d92.jpg)
+
 
 ### 2.2. ユースケース分析(機能要件定義)
 
@@ -96,6 +99,8 @@
 **成果物**
 - 非機能要件定義書
 
+**有用なツール・ドキュメント**
+- [非機能要求グレード](https://www.ipa.go.jp/archive/digital/iot-en-ci/jyouryuu/hikinou/ent03-b.html)
 
 ## 3. アプリケーション基本設計
 
