--- a/docs/ツール索引.md
+++ b/docs/ツール索引.md
@@ -33,6 +33,7 @@
 | ツール名 | 料金 | 特徴 | 主な用途 |
 |---------|------|------|---------|
 | [ERDPlus](./ツール/データベースツール/ERDPlus.md) | 🟢 無料 | オンラインER図作成 | ER図、リレーショナルスキーマ |
+| [Flyway](./ツール/データベースツール/Flyway.md) | 🟡 一部無料 | データベースマイグレーション | スキーマバージョン管理、マイグレーション自動化 |
 | [MySQL Workbench](./ツール/データベースツール/MySQL_Workbench.md) | 🟢 無料 | MySQL公式、DDL生成 | ER図、データベース設計、SQL開発 |
 
 ### APIツール
@@ -56,10 +57,67 @@
 |---------|------|------|---------|
 | [Apache Airflow](./ツール/バッチ処理ツール/Apache_Airflow.md) | 🟢 無料 | オープンソース、Pythonベース | ワークフロー管理、バッチスケジューリング |
 
+### IaCツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [AWS CloudFormation](./ツール/IaCツール/AWS_CloudFormation.md) | 🟢 無料 | AWS公式IaCツール | AWS インフラ自動化 |
+| [Azure Bicep](./ツール/IaCツール/Azure_Bicep.md) | 🟢 無料 | Azure公式IaC言語 | Azure インフラ自動化 |
+| [Terraform](./ツール/IaCツール/Terraform.md) | 🟡 一部無料 | マルチクラウドIaC | クラウドインフラ自動化 |
+
+### CI/CDツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [GitHub Actions](./ツール/CI_CDツール/GitHub_Actions.md) | 🟡 一部無料 | GitHub統合CI/CD | 自動ビルド、テスト、デプロイ |
+| [GitLab CI/CD](./ツール/CI_CDツール/GitLab_CI_CD.md) | 🟡 一部無料 | GitLab統合CI/CD | パイプライン自動化 |
+| [Jenkins](./ツール/CI_CDツール/Jenkins.md) | 🟢 無料 | オープンソースCI/CD | 継続的インテグレーション |
+
+### テストツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [Cypress](./ツール/テストツール/Cypress.md) | 🟡 一部無料 | JavaScript E2Eテスト | フロントエンドE2Eテスト |
+| [Jest](./ツール/テストツール/Jest.md) | 🟢 無料 | JavaScript テストフレームワーク | Reactユニットテスト |
+| [JUnit](./ツール/テストツール/JUnit.md) | 🟢 無料 | Javaテストフレームワーク | Javaユニットテスト |
+| [pytest](./ツール/テストツール/pytest.md) | 🟢 無料 | Pythonテストフレームワーク | Pythonユニットテスト |
+| [Selenium](./ツール/テストツール/Selenium.md) | 🟢 無料 | ブラウザ自動化 | Webアプリケーションテスト |
+
+### セキュリティツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [Checkov](./ツール/セキュリティツール/Checkov.md) | 🟢 無料 | IaCセキュリティスキャン | Terraform/CloudFormation検証 |
+| [OWASP ZAP](./ツール/セキュリティツール/OWASP_ZAP.md) | 🟢 無料 | オープンソース脆弱性スキャン | Webアプリケーション脆弱性診断 |
+| [Snyk](./ツール/セキュリティツール/Snyk.md) | 🟡 一部無料 | 依存関係脆弱性スキャン | セキュリティ脆弱性検出 |
+
+### コンテナツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [Docker](./ツール/コンテナツール/Docker.md) | 🟢 無料 | コンテナ化プラットフォーム | アプリケーションコンテナ化 |
+| [Kubernetes](./ツール/コンテナツール/Kubernetes.md) | 🟢 無料 | コンテナオーケストレーション | コンテナ管理・スケーリング |
+
+### プロジェクト管理ツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [Asana](./ツール/プロジェクト管理ツール/Asana.md) | 🟡 一部無料 | ワークマネジメント | タスク管理、プロジェクト計画 |
+| [JIRA](./ツール/プロジェクト管理ツール/JIRA.md) | 🟡 一部無料 | アジャイルプロジェクト管理 | 課題追跡、スプリント管理 |
+| [Trello](./ツール/プロジェクト管理ツール/Trello.md) | 🟡 一部無料 | カンバンボード | タスク管理、チーム協業 |
+
+### 開発環境ツール
+
+| ツール名 | 料金 | 特徴 | 主な用途 |
+|---------|------|------|---------|
+| [IntelliJ IDEA](./ツール/開発環境ツール/IntelliJ_IDEA.md) | 🟡 一部無料 | Java統合開発環境 | Java/Kotlin開発 |
+| [Visual Studio Code](./ツール/開発環境ツール/VS_Code.md) | 🟢 無料 | 軽量コードエディタ | マルチ言語開発 |
+
 ### 監視ツール
 
 | ツール名 | 料金 | 特徴 | 主な用途 |
 |---------|------|------|---------|
+| [Datadog](./ツール/監視ツール/Datadog.md) | 🔴 有料 | 統合監視プラットフォーム | APM、ログ管理、インフラ監視 |
 | [Grafana](./ツール/監視ツール/Grafana.md) | 🟢 無料 | オープンソース、多数のデータソース対応 | メトリクス可視化、ダッシュボード |
 | [Prometheus](./ツール/監視ツール/Prometheus.md) | 🟢 無料 | オープンソース、時系列DB | メトリクス収集、アラート |
 
@@ -97,26 +155,49 @@
 |---------|---------|------|------------------|
 | Adobe XD | UI/UXツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/UI_UXツール/Adobe_XD.md) |
 | Apache Airflow | バッチ処理ツール | 🟢 無料 | [📄 ドキュメント](./ツール/バッチ処理ツール/Apache_Airflow.md) |
+| Asana | プロジェクト管理ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/プロジェクト管理ツール/Asana.md) |
+| AWS CloudFormation | IaCツール | 🟢 無料 | [📄 ドキュメント](./ツール/IaCツール/AWS_CloudFormation.md) |
+| Azure Bicep | IaCツール | 🟢 無料 | [📄 ドキュメント](./ツール/IaCツール/Azure_Bicep.md) |
 | Bizagi Modeler | プロセスモデリングツール | 🟢 無料 | [📄 ドキュメント](./ツール/プロセスモデリングツール/Bizagi_Modeler.md) |
+| Checkov | セキュリティツール | 🟢 無料 | [📄 ドキュメント](./ツール/セキュリティツール/Checkov.md) |
+| Cypress | テストツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/テストツール/Cypress.md) |
+| Datadog | 監視ツール | 🔴 有料 | [📄 ドキュメント](./ツール/監視ツール/Datadog.md) |
+| Docker | コンテナツール | 🟢 無料 | [📄 ドキュメント](./ツール/コンテナツール/Docker.md) |
 | Draw.io | 作図ツール | 🟢 無料 | [📄 ドキュメント](./ツール/作図ツール/Draw.io.md) |
 | Enterprise Architect | UMLツール | 🔴 有料 | [📄 ドキュメント](./ツール/UMLツール/Enterprise_Architect.md) |
 | ERDPlus | データベースツール | 🟢 無料 | [📄 ドキュメント](./ツール/データベースツール/ERDPlus.md) |
 | Figma | UI/UXツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/UI_UXツール/Figma.md) |
+| Flyway | データベースツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/データベースツール/Flyway.md) |
+| GitHub Actions | CI/CDツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/CI_CDツール/GitHub_Actions.md) |
+| GitLab CI/CD | CI/CDツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/CI_CDツール/GitLab_CI_CD.md) |
 | Grafana | 監視ツール | 🟢 無料 | [📄 ドキュメント](./ツール/監視ツール/Grafana.md) |
+| IntelliJ IDEA | 開発環境ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/開発環境ツール/IntelliJ_IDEA.md) |
 | IPA 非機能要求グレード | 標準・ガイドライン | 🟢 無料 | [📄 ドキュメント](./ツール/標準・ガイドライン/IPA_非機能要求グレード.md) |
 | JasperReports | 帳票ツール | 🟢 無料 | [📄 ドキュメント](./ツール/帳票ツール/JasperReports.md) |
+| Jenkins | CI/CDツール | 🟢 無料 | [📄 ドキュメント](./ツール/CI_CDツール/Jenkins.md) |
+| Jest | テストツール | 🟢 無料 | [📄 ドキュメント](./ツール/テストツール/Jest.md) |
+| JIRA | プロジェクト管理ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/プロジェクト管理ツール/JIRA.md) |
+| JUnit | テストツール | 🟢 無料 | [📄 ドキュメント](./ツール/テストツール/JUnit.md) |
+| Kubernetes | コンテナツール | 🟢 無料 | [📄 ドキュメント](./ツール/コンテナツール/Kubernetes.md) |
 | LibreOffice | 帳票ツール | 🟢 無料 | [📄 ドキュメント](./ツール/帳票ツール/LibreOffice.md) |
 | Lucidchart | 作図ツール | 🔴 有料 | [📄 ドキュメント](./ツール/作図ツール/Lucidchart.md) |
 | Microsoft Excel | 帳票ツール | 🔴 有料 | [📄 ドキュメント](./ツール/帳票ツール/Microsoft_Excel.md) |
 | Microsoft Visio | 作図ツール | 🔴 有料 | [📄 ドキュメント](./ツール/作図ツール/Microsoft_Visio.md) |
 | MySQL Workbench | データベースツール | 🟢 無料 | [📄 ドキュメント](./ツール/データベースツール/MySQL_Workbench.md) |
+| OWASP ZAP | セキュリティツール | 🟢 無料 | [📄 ドキュメント](./ツール/セキュリティツール/OWASP_ZAP.md) |
 | PlantUML | 作図ツール | 🟢 無料 | [📄 ドキュメント](./ツール/作図ツール/PlantUML.md) |
 | Postman | APIツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/APIツール/Postman.md) |
 | Process Street | プロセスモデリングツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/プロセスモデリングツール/Process_Street.md) |
 | Prometheus | 監視ツール | 🟢 無料 | [📄 ドキュメント](./ツール/監視ツール/Prometheus.md) |
+| pytest | テストツール | 🟢 無料 | [📄 ドキュメント](./ツール/テストツール/pytest.md) |
 | Python Pandas | データ処理ツール | 🟢 無料 | [📄 ドキュメント](./ツール/データ処理ツール/Python_Pandas.md) |
+| Selenium | テストツール | 🟢 無料 | [📄 ドキュメント](./ツール/テストツール/Selenium.md) |
+| Snyk | セキュリティツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/セキュリティツール/Snyk.md) |
 | Swagger/OpenAPI | APIツール | 🟢 無料 | [📄 ドキュメント](./ツール/APIツール/Swagger_OpenAPI.md) |
+| Terraform | IaCツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/IaCツール/Terraform.md) |
+| Trello | プロジェクト管理ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/プロジェクト管理ツール/Trello.md) |
 | Visual Paradigm | UMLツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/UMLツール/Visual_Paradigm.md) |
+| Visual Studio Code | 開発環境ツール | 🟢 無料 | [📄 ドキュメント](./ツール/開発環境ツール/VS_Code.md) |
 
 ---
 
@@ -248,11 +329,17 @@
 |---------|----------|
 | 作図 | Draw.io, PlantUML |
 | UI/UX | Figma（無料プラン） |
-| データベース | MySQL Workbench, ERDPlus |
+| データベース | MySQL Workbench, ERDPlus, Flyway（Community版） |
 | API | Postman（無料プラン）, Swagger/OpenAPI |
 | 帳票 | LibreOffice |
 | バッチ | Apache Airflow |
 | 監視 | Grafana, Prometheus |
+| IaC | Terraform（無料版）, AWS CloudFormation, Azure Bicep |
+| CI/CD | GitHub Actions（無料枠）, Jenkins |
+| テスト | JUnit, pytest, Jest, Selenium |
+| セキュリティ | OWASP ZAP, Checkov |
+| コンテナ | Docker, Kubernetes |
+| 開発環境 | Visual Studio Code |
 
 #### チーム協業に適したツール
 
@@ -261,6 +348,8 @@
 | 作図 | Lucidchart | 有料 |
 | UI/UX | Figma（Team プラン） | 有料 |
 | API | Postman（Team プラン） | 有料 |
+| プロジェクト管理 | JIRA, Asana, Trello | 有料プランあり |
+| CI/CD | GitHub Actions（Team）, GitLab CI/CD | 有料プランあり |
 
 #### エンタープライズ向けツール
 
@@ -269,6 +358,9 @@
 | 作図 | Microsoft Visio | 有料 |
 | UML | Enterprise Architect | 有料 |
 | UI/UX | Adobe XD | 有料 |
+| 開発環境 | IntelliJ IDEA Ultimate | 有料 |
+| 監視 | Datadog | 有料 |
+| セキュリティ | Snyk Enterprise | 有料 |
 
 ### オンライン vs オフライン
 
@@ -298,5 +390,12 @@
 
 ---
 
-**最終更新日**: 2025年（令和7年）
-**バージョン**: 2.0
+**最終更新日**: 2025年11月30日（令和7年）
+**バージョン**: 3.0
+**ツール総数**: 45ツール（前回22ツールから23ツール追加）
+
+### 更新履歴
+
+- **v3.0 (2025-11-30)**: Phase 1優先ツール23個を追加（IaC、CI/CD、テスト、セキュリティ、コンテナ、プロジェクト管理、開発環境、監視、データベースツール）
+- **v2.0**: カテゴリ別ツール統合、22ツールを文書化
+- **v1.0**: 初版作成
