--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -4,40 +4,46 @@
 
 ## 統計
 
-- **カテゴリ数**: 30
-- **ツール総数**: 88
+- **カテゴリ数**: 36
+- **ツール総数**: 100
 
 ## 目次
 
 - [APIツール](#apiツール) (5ツール)
-- [CI_CDツール](#ci-cdツール) (4ツール)
+- [CI_CDツール](#ci-cdツール) (5ツール)
+- [CLIツール](#cliツール) (1ツール)
 - [ITSMツール](#itsmツール) (1ツール)
 - [IaCセキュリティツール](#iacセキュリティツール) (3ツール)
-- [IaCツール](#iacツール) (4ツール)
+- [IaCツール](#iacツール) (5ツール)
 - [UI_UXツール](#ui-uxツール) (4ツール)
 - [UMLツール](#umlツール) (3ツール)
 - [インフラテストツール](#インフラテストツール) (2ツール)
 - [インフラ設計ツール](#インフラ設計ツール) (1ツール)
+- [クエリツール](#クエリツール) (1ツール)
 - [コラボレーションツール](#コラボレーションツール) (2ツール)
-- [コンテナツール](#コンテナツール) (2ツール)
+- [コンテナツール](#コンテナツール) (3ツール)
 - [セキュリティツール](#セキュリティツール) (3ツール)
 - [セキュリティ設計ツール](#セキュリティ設計ツール) (1ツール)
 - [テストツール](#テストツール) (10ツール)
 - [テスト管理ツール](#テスト管理ツール) (2ツール)
-- [データベースツール](#データベースツール) (4ツール)
+- [データベースツール](#データベースツール) (5ツール)
+- [データベース設計ツール](#データベース設計ツール) (1ツール)
 - [データ処理ツール](#データ処理ツール) (1ツール)
-- [ドキュメント管理ツール](#ドキュメント管理ツール) (2ツール)
+- [ドキュメント管理ツール](#ドキュメント管理ツール) (3ツール)
 - [バッチ処理ツール](#バッチ処理ツール) (1ツール)
 - [バージョン管理ツール](#バージョン管理ツール) (1ツール)
 - [プロジェクト管理ツール](#プロジェクト管理ツール) (4ツール)
 - [プロセスモデリングツール](#プロセスモデリングツール) (2ツール)
 - [ポリシー管理ツール](#ポリシー管理ツール) (1ツール)
+- [レポーティングツール](#レポーティングツール) (1ツール)
 - [作図ツール](#作図ツール) (7ツール)
 - [帳票ツール](#帳票ツール) (3ツール)
 - [標準・ガイドライン](#標準・ガイドライン) (1ツール)
 - [監視ツール](#監視ツール) (8ツール)
+- [自動化ツール](#自動化ツール) (1ツール)
+- [表計算ツール](#表計算ツール) (1ツール)
 - [要件管理ツール](#要件管理ツール) (1ツール)
-- [開発ツール](#開発ツール) (2ツール)
+- [開発ツール](#開発ツール) (3ツール)
 - [開発環境ツール](#開発環境ツール) (3ツール)
 
 ## APIツール
@@ -54,14 +60,23 @@
 
 ## CI_CDツール
 
-**ツール数**: 4
+**ツール数**: 5
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
+| AWS CodeBuild | AWS CodeBuildは、Amazon Web Services公式のフルマネージドCI/CDビルドサービスです。ソースコードをコンパイル、テスト実行、デプロイ可能なアーティファクト生成まで自動化し、サーバープロビジョニング不要でスケーラブルなビルド環境を提供します。AWS CodePipeline、GitHub、Bitbucket等と統合し、Docker、Lambda、ECS等へのデプロイを... | [AWS_CodeBuild.md](CI_CDツール/AWS_CodeBuild.md) |
 | Azure DevOps Pipelines | Azure DevOps Pipelinesは、Microsoft Azure DevOps内のCI/CDサービスです。YAML定義またはクラシックUIでビルド・デプロイパイプラインを作成し、マルチプラットフォーム（Windows、Linux、macOS）、マルチ言語（.NET、Java、Python、Node.js等）、マルチクラウド（Azure、AWS、GCP）に対応します。GitHub、Gi... | [Azure_DevOps_Pipelines.md](CI_CDツール/Azure_DevOps_Pipelines.md) |
 | GitHub Actions | GitHub Actionsは、GitHubが提供する公式のCI/CD（継続的インテグレーション/継続的デリバリー）プラットフォームです。GitHubリポジトリに統合されたワークフロー自動化ツールとして、ビルド、テスト、デプロイを含むソフトウェア開発ライフサイクル全体を自動化できます。YAMLファイルでワークフローを定義し、プッシュ、プルリクエスト、スケジュール、手動トリガーなど様々なイベントで実... | [GitHub_Actions.md](CI_CDツール/GitHub_Actions.md) |
 | GitLab CI/CD | GitLab CI/CDは、GitLabに統合された継続的インテグレーション/継続的デリバリーのプラットフォームです。`.gitlab-ci.yml`ファイルでパイプラインを定義し、ビルド、テスト、デプロイを自動化します。GitLabランナーを使用してジョブを実行し、セルフホスト型とクラウド型の両方に対応しています。DevOpsライフサイクル全体をカバーする包括的な機能を提供します。 | [GitLab_CI_CD.md](CI_CDツール/GitLab_CI_CD.md) |
 | Jenkins | Jenkinsは、オープンソースの自動化サーバーで、CI/CD（継続的インテグレーション/継続的デリバリー）のデファクトスタンダードとして長年利用されています。Java製で、プラグインアーキテクチャにより高い拡張性を持ち、ほぼ全ての開発ツールやプラットフォームと統合可能です。Jenkinsfileによるパイプライン as Codeをサポートし、複雑なビルド・テスト・デプロイワークフローを自動化でき... | [Jenkins.md](CI_CDツール/Jenkins.md) |
+
+## CLIツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Azure CLI | Azure CLI（Command-Line Interface）は、Microsoft Azure公式のコマンドラインツールです。ブラウザのAzure Portalを使わず、ターミナルからAzureリソース（VM、Storage、App Service等）を作成・管理・削除できます。クロスプラットフォーム（Windows、macOS、Linux）対応で、シェルスクリプト、CI/CDパイプライン、... | [Azure_CLI.md](CLIツール/Azure_CLI.md) |
 
 ## ITSMツール
 
@@ -83,10 +98,11 @@
 
 ## IaCツール
 
-**ツール数**: 4
+**ツール数**: 5
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
+| ARM Templates | ARM Templates（Azure Resource Manager Templates）は、Microsoft Azure公式のInfrastructure as Code（IaC）ソリューションです。JSON形式でAzureリソース（VM、Storage、ネットワーク等）を宣言的に定義し、一貫性のあるデプロイを実現します。バージョン管理、テンプレート再利用、パラメータ化により、インフラのコ... | [ARM_Templates.md](IaCツール/ARM_Templates.md) |
 | AWS CloudFormation | AWS CloudFormationは、Amazon Web Services（AWS）が提供するInfrastructure as Code（IaC）サービスです。JSON/YAMLテンプレートを使用してAWSリソースをモデル化し、プロビジョニングを自動化します。AWSネイティブのサービスとして、AWSの全リソースに対応し、スタック単位でのリソース管理が可能です。 | [AWS_CloudFormation.md](IaCツール/AWS_CloudFormation.md) |
 | Ansible | Ansibleは、Red Hat社が提供するオープンソースの構成管理・自動化ツールです。エージェントレスアーキテクチャにより、SSHベースでサーバーの構成管理、アプリケーションデプロイ、タスク自動化を実現します。YAML形式のPlaybookで人間が読みやすい設定を記述し、冪等性を保証することで、インフラストラクチャの一貫性と再現性を確保します。 | [Ansible.md](IaCツール/Ansible.md) |
 | Azure Bicep | Azure Bicepは、Microsoftが開発したAzure Resource Manager (ARM) テンプレートのための宣言型言語です。JSONベースのARMテンプレートをより簡潔で読みやすい構文で記述できるDSL（ドメイン固有言語）として設計されています。BicepはARMテンプレートにトランスパイルされ、Azureリソースのデプロイに使用されます。 | [Azure_Bicep.md](IaCツール/Azure_Bicep.md) |
@@ -130,6 +146,14 @@
 |----------|------|----------|
 | CloudCraft | CloudCraftは、AWSインフラストラクチャをビジュアルに設計・文書化できるクラウドアーキテクチャ図作成ツールです。ドラッグ&ドロップで直感的にAWSリソースを配置し、美しい3Dまたは2Dのシステム構成図を作成できます。既存のAWSアカウントと連携して現在のインフラを自動的にスキャンし、ドキュメント化することも可能です。コスト見積もり機能により、設計段階でインフラコストを把握できます。 | [CloudCraft.md](インフラ設計ツール/CloudCraft.md) |
 
+## クエリツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Azure Resource Graph | Azure Resource Graphは、Microsoft Azure公式の大規模リソースクエリサービスです。KQL（Kusto Query Language）でAzureリソースをサブスクリプション横断で高速検索・分析し、リソース管理、コスト最適化、コンプライアンス監査を支援します。Azure Portal、Azure CLI、PowerShell、REST APIから利用でき、Azure ... | [Azure_Resource_Graph.md](クエリツール/Azure_Resource_Graph.md) |
+
 ## コラボレーションツール
 
 **ツール数**: 2
@@ -141,12 +165,13 @@
 
 ## コンテナツール
 
-**ツール数**: 2
+**ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Docker | Dockerは、アプリケーションをコンテナと呼ばれる軽量で移植可能な環境にパッケージ化するためのプラットフォームです。2013年に登場して以来、コンテナ技術のデファクトスタンダードとなり、「Build once, Run anywhere」を実現します。開発環境と本番環境の差異を解消し、マイクロサービスアーキテクチャの普及に大きく貢献しました。Dockerfileによるインフラのコード化、Dock... | [Docker.md](コンテナツール/Docker.md) |
 | Kubernetes (K8s) | Kubernetes（K8s）は、Googleが開発したオープンソースのコンテナオーケストレーションプラットフォームです。2014年にリリースされ、Cloud Native Computing Foundation（CNCF）のフラグシッププロジェクトとして、コンテナ化されたアプリケーションのデプロイ、スケーリング、管理を自動化します。宣言的な設定によりインフラをコード化し、自己修復、水平スケーリ... | [Kubernetes.md](コンテナツール/Kubernetes.md) |
+| Rancher | Rancher は、SUSE が提供するオープンソースの Kubernetes 管理プラットフォームです。複数の Kubernetes クラスタを統合的に管理し、マルチクラスタ、マルチクラウド環境での運用を簡素化します。Web UI による直感的な操作、認証・認可、モニタリング、カタログアプリケーションのデプロイなど、エンタープライズ環境に必要な機能を包括的に提供します。 | [Rancher.md](コンテナツール/Rancher.md) |
 
 ## セキュリティツール
 
@@ -194,14 +219,23 @@
 
 ## データベースツール
 
-**ツール数**: 4
+**ツール数**: 5
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
+| DBML (Database Markup Language) | DBML（Database Markup Language）は、データベーススキーマを記述するためのオープンソースの DSL（ドメイン固有言語）です。人間が読みやすいシンプルな構文でテーブル、カラム、リレーションシップを定義し、ER図の自動生成やSQL DDLへの変換が可能です。dbdiagram.io が開発し、データベース設計のドキュメント化とビジュアライゼーションを効率化します。 | [DBML.md](データベースツール/DBML.md) |
 | ERDPlus | ERDPlusは、完全無料のオンラインER図（Entity-Relationship Diagram）作成ツールで、教育機関や小規模プロジェクトに適しています。ブラウザベースで動作し、概念モデリング、論理モデリング、物理モデリングに対応し、SQL自動生成機能も備えています。 ### 主な特徴 - **完全無料**: すべての機能が無料で利用可能 - **ブラウザベース**: インストール不要で、W... | [ERDPlus.md](データベースツール/ERDPlus.md) |
 | Flyway | Flywayは、データベーススキーマのバージョン管理とマイグレーションを自動化するオープンソースツールです。SQLベースのマイグレーションスクリプトを管理し、データベーススキーマの変更を追跡、適用します。 **主な特徴:** - シンプルなSQLベースのマイグレーション - バージョン管理とマイグレーション履歴の追跡 - 複数データベース対応（Oracle、SQL Server、PostgreSQ... | [Flyway.md](データベースツール/Flyway.md) |
 | MySQL Workbench | MySQL Workbenchは、Oracle社が提供するMySQL公式の統合開発環境（IDE）です。データベース設計、SQL開発、サーバー管理を一つのツールで行える包括的なGUIツールで、ER図によるビジュアルデータベース設計、SQLエディタ、データモデリング、リバースエンジニアリング、データベース移行などの機能を提供します。 | [MySQL_Workbench.md](データベースツール/MySQL_Workbench.md) |
 | pgModeler | pgModelerは、PostgreSQL専用のオープンソースデータベースモデリングツールです。ER図（Entity-Relationship Diagram）を視覚的に設計し、DDL（Data Definition Language）を自動生成できます。既存データベースからのリバースエンジニアリング、差分比較、バージョン管理対応により、データベース設計からスキーマ管理までを効率化します。 | [pgModeler.md](データベースツール/pgModeler.md) |
+
+## データベース設計ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| ERDPlus | ERDPlusは、無料のオンラインER図（Entity-Relationship Diagram）作成ツールです。ブラウザでデータベース設計（概念モデル、論理モデル、物理モデル）、UMLクラス図、リレーショナルスキーマを作成し、PNG、PDF、SQL DDL出力をサポートします。学生、教育機関、小規模プロジェクトに適し、インストール不要、アカウント登録不要で利用できます。 | [ERDPlus.md](データベース設計ツール/ERDPlus.md) |
 
 ## データ処理ツール
 
@@ -213,12 +247,13 @@
 
 ## ドキュメント管理ツール
 
-**ツール数**: 2
+**ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Confluence | Confluenceは、Atlassian社が開発したチーム向けドキュメント管理・ナレッジベースツールです。Wikiベースの協業プラットフォームとして、プロジェクトドキュメント、要件定義書、設計書、議事録、ナレッジ記事などを一元管理できます。JIRA、Trello、Slackなど他のツールとシームレスに統合し、チームの情報共有とコラボレーションを促進します。 | [Confluence.md](ドキュメント管理ツール/Confluence.md) |
 | Notion | Notionは、オールインワンワークスペースツールです。ドキュメント作成、Wiki、データベース、タスク管理、プロジェクト管理を一つのプラットフォームで実現します。ブロックベースのエディタにより、テキスト、画像、表、データベース、埋め込みコンテンツを自由に組み合わせ、柔軟なページを作成できます。個人利用からチーム協業まで幅広く対応し、世界中で3,000万人以上のユーザーに利用されています。 | [Notion.md](ドキュメント管理ツール/Notion.md) |
+| Obsidian | Obsidian は、Markdown ベースのナレッジベース・ノート管理アプリケーションです。ローカルファイルを基盤とし、双方向リンクによるネットワーク状のノート構造を構築できます。「Second Brain（第二の脳）」として、個人的な知識管理からチームのドキュメント管理まで幅広く活用できます。 | [Obsidian.md](ドキュメント管理ツール/Obsidian.md) |
 
 ## バッチ処理ツール
 
@@ -263,6 +298,14 @@
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | OPA (Open Policy Agent) | OPA（Open Policy Agent）は、CNCF（Cloud Native Computing Foundation）のGraduatedプロジェクトである汎用ポリシーエンジンです。Rego言語でポリシーをコード化し、マイクロサービス、Kubernetes、CI/CD、API Gateway等のあらゆるレイヤーで統一的なポリシー管理を実現します。宣言的なポリシー定義により、認可、アドミッシ... | [OPA.md](ポリシー管理ツール/OPA.md) |
+
+## レポーティングツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Crystal Reports | Crystal Reportsは、SAP社が提供するエンタープライズレポーティングツールです。データベース、Excel、XMLからデータを取得し、ビジュアルなレポート（帳票、グラフ、ダッシュボード）を作成します。30年以上の歴史を持ち、財務レポート、在庫管理、販売分析等のビジネスレポート作成に特化し、.NET、Java、Webアプリケーションに統合できます。 | [Crystal_Reports.md](レポーティングツール/Crystal_Reports.md) |
 
 ## 作図ツール
 
@@ -311,6 +354,22 @@
 | Prometheus（監視・運用設計書） | Prometheusは、オープンソースの時系列データベース・監視システムで、基本設計（インフラ）フェーズではメトリクス収集設計、監視基盤設計、アラートルール設計に活用します。Kubernetes環境での標準的な監視ツールであり、Pull型メトリクス収集、柔軟なクエリ言語（PromQL）、スケーラブルな設計が特徴です。 ### 基本設計（インフラ）フェーズでの活用 - **メトリクス収集設計**: ... | [Prometheus.md](監視ツール/Prometheus.md) |
 | Splunk | Splunkは、マシンデータ（ログ、メトリクス、トレース）を収集・検索・分析・可視化する統合プラットフォームです。リアルタイムおよび履歴データの検索により、セキュリティ監視、運用監視、ビジネスインテリジェンス、コンプライアンス監査を実現します。Splunk Processing Language（SPL）による強力なクエリ機能と、ダッシュボード、アラート、レポートにより、ITインフラからアプリケー... | [Splunk.md](監視ツール/Splunk.md) |
 
+## 自動化ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Azure Automation | Azure Automationは、Microsoft Azure公式のクラウドベース自動化・構成管理サービスです。Runbook（PowerShell、Python）でクラウド・オンプレミス環境のタスクを自動化し、更新プログラム管理、構成管理（DSC）、プロセスオーケストレーションを提供します。スケジュール実行、Webhook、イベント駆動で業務プロセスを効率化し、Azure Monitor、A... | [Azure_Automation.md](自動化ツール/Azure_Automation.md) |
+
+## 表計算ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Excel / Google Sheets | Microsoft ExcelとGoogle Sheetsは、世界で最も広く使用されている表計算ソフトウェアです。データ入力、計算、グラフ作成、ピボットテーブル、マクロ（VBA、Apps Script）で、財務分析、プロジェクト管理、データ分析、レポート作成を支援します。Excelはデスクトップアプリケーション（Microsoft Office）、Google Sheetsはクラウドベース（Goo... | [Excel_Google_Sheets.md](表計算ツール/Excel_Google_Sheets.md) |
+
 ## 要件管理ツール
 
 **ツール数**: 1
@@ -321,12 +380,13 @@
 
 ## 開発ツール
 
-**ツール数**: 2
+**ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | ESLint | ESLintは、JavaScriptおよびTypeScriptのための静的コード解析ツールです。コードの品質問題、潜在的なバグ、スタイル違反を検出し、自動修正機能により一貫したコーディング規約を強制します。プラグインシステムにより、React、Vue、Node.js等のフレームワーク固有のルールを追加でき、CI/CDパイプラインに統合することで、チーム全体のコード品質を保証します。 | [ESLint.md](開発ツール/ESLint.md) |
 | Prettier | Prettierは、「妥協なし」（Opinionated）のコードフォーマッターです。JavaScript、TypeScript、HTML、CSS、JSON、Markdown等の多様な言語をサポートし、一貫したコードスタイルを自動的に適用します。設定をほとんど必要とせず、チーム全体で統一されたフォーマットを強制することで、コードレビューでのスタイル議論を排除します。 | [Prettier.md](開発ツール/Prettier.md) |
+| WinMerge | WinMerge は、Windows 向けのオープンソースファイル比較・マージツールです。テキストファイル、フォルダ、画像などの差分を視覚的に表示し、マージ作業を支援します。シンプルなインターフェースで直感的に操作でき、個人開発者からエンタープライズまで幅広く利用されています。 | [WinMerge.md](開発ツール/WinMerge.md) |
 
 ## 開発環境ツール
 
