--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -4,8 +4,8 @@
 
 ## 統計
 
-- **カテゴリ数**: 36
-- **ツール総数**: 100
+- **カテゴリ数**: 40
+- **ツール総数**: 106
 
 ## 目次
 
@@ -14,7 +14,7 @@
 - [CLIツール](#cliツール) (1ツール)
 - [ITSMツール](#itsmツール) (1ツール)
 - [IaCセキュリティツール](#iacセキュリティツール) (3ツール)
-- [IaCツール](#iacツール) (5ツール)
+- [IaCツール](#iacツール) (6ツール)
 - [UI_UXツール](#ui-uxツール) (4ツール)
 - [UMLツール](#umlツール) (3ツール)
 - [インフラテストツール](#インフラテストツール) (2ツール)
@@ -22,9 +22,10 @@
 - [クエリツール](#クエリツール) (1ツール)
 - [コラボレーションツール](#コラボレーションツール) (2ツール)
 - [コンテナツール](#コンテナツール) (3ツール)
+- [システム管理ツール](#システム管理ツール) (1ツール)
 - [セキュリティツール](#セキュリティツール) (3ツール)
 - [セキュリティ設計ツール](#セキュリティ設計ツール) (1ツール)
-- [テストツール](#テストツール) (10ツール)
+- [テストツール](#テストツール) (11ツール)
 - [テスト管理ツール](#テスト管理ツール) (2ツール)
 - [データベースツール](#データベースツール) (5ツール)
 - [データベース設計ツール](#データベース設計ツール) (1ツール)
@@ -32,9 +33,11 @@
 - [ドキュメント管理ツール](#ドキュメント管理ツール) (3ツール)
 - [バッチ処理ツール](#バッチ処理ツール) (1ツール)
 - [バージョン管理ツール](#バージョン管理ツール) (1ツール)
+- [フレームワークツール](#フレームワークツール) (1ツール)
 - [プロジェクト管理ツール](#プロジェクト管理ツール) (4ツール)
 - [プロセスモデリングツール](#プロセスモデリングツール) (2ツール)
 - [ポリシー管理ツール](#ポリシー管理ツール) (1ツール)
+- [マイグレーションツール](#マイグレーションツール) (1ツール)
 - [レポーティングツール](#レポーティングツール) (1ツール)
 - [作図ツール](#作図ツール) (7ツール)
 - [帳票ツール](#帳票ツール) (3ツール)
@@ -43,6 +46,7 @@
 - [自動化ツール](#自動化ツール) (1ツール)
 - [表計算ツール](#表計算ツール) (1ツール)
 - [要件管理ツール](#要件管理ツール) (1ツール)
+- [設計ツール](#設計ツール) (1ツール)
 - [開発ツール](#開発ツール) (3ツール)
 - [開発環境ツール](#開発環境ツール) (3ツール)
 
@@ -98,7 +102,7 @@
 
 ## IaCツール
 
-**ツール数**: 5
+**ツール数**: 6
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
@@ -106,6 +110,7 @@
 | AWS CloudFormation | AWS CloudFormationは、Amazon Web Services（AWS）が提供するInfrastructure as Code（IaC）サービスです。JSON/YAMLテンプレートを使用してAWSリソースをモデル化し、プロビジョニングを自動化します。AWSネイティブのサービスとして、AWSの全リソースに対応し、スタック単位でのリソース管理が可能です。 | [AWS_CloudFormation.md](IaCツール/AWS_CloudFormation.md) |
 | Ansible | Ansibleは、Red Hat社が提供するオープンソースの構成管理・自動化ツールです。エージェントレスアーキテクチャにより、SSHベースでサーバーの構成管理、アプリケーションデプロイ、タスク自動化を実現します。YAML形式のPlaybookで人間が読みやすい設定を記述し、冪等性を保証することで、インフラストラクチャの一貫性と再現性を確保します。 | [Ansible.md](IaCツール/Ansible.md) |
 | Azure Bicep | Azure Bicepは、Microsoftが開発したAzure Resource Manager (ARM) テンプレートのための宣言型言語です。JSONベースのARMテンプレートをより簡潔で読みやすい構文で記述できるDSL（ドメイン固有言語）として設計されています。BicepはARMテンプレートにトランスパイルされ、Azureリソースのデプロイに使用されます。 | [Azure_Bicep.md](IaCツール/Azure_Bicep.md) |
+| Bicep | Bicepは、Microsoft Azure公式のDomain Specific Language（DSL）で、ARM Templates（JSON）の高レベル抽象化言語です。簡潔な宣言的構文でAzureリソース（VM、Storage、ネットワーク等）を定義し、ARM Templatesにトランスパイルしてデプロイします。モジュール化、型安全、IntelliSense、リンターにより、Infras... | [Bicep.md](IaCツール/Bicep.md) |
 | Terraform | Terraformは、HashiCorp社が開発したオープンソースのInfrastructure as Code（IaC）ツールです。HCL（HashiCorp Configuration Language）という宣言型の設定言語を使用して、クラウドインフラストラクチャをコードとして定義・管理できます。AWS、Azure、GCP、その他多数のプロバイダーに対応したマルチクラウド対応が特徴です。 | [Terraform.md](IaCツール/Terraform.md) |
 
 ## UI_UXツール
@@ -173,6 +178,14 @@
 | Kubernetes (K8s) | Kubernetes（K8s）は、Googleが開発したオープンソースのコンテナオーケストレーションプラットフォームです。2014年にリリースされ、Cloud Native Computing Foundation（CNCF）のフラグシッププロジェクトとして、コンテナ化されたアプリケーションのデプロイ、スケーリング、管理を自動化します。宣言的な設定によりインフラをコード化し、自己修復、水平スケーリ... | [Kubernetes.md](コンテナツール/Kubernetes.md) |
 | Rancher | Rancher は、SUSE が提供するオープンソースの Kubernetes 管理プラットフォームです。複数の Kubernetes クラスタを統合的に管理し、マルチクラスタ、マルチクラウド環境での運用を簡素化します。Web UI による直感的な操作、認証・認可、モニタリング、カタログアプリケーションのデプロイなど、エンタープライズ環境に必要な機能を包括的に提供します。 | [Rancher.md](コンテナツール/Rancher.md) |
 
+## システム管理ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| AWS Systems Manager | AWS Systems Manager（旧SSM）は、Amazon Web Services公式のクラウド・オンプレミス統合管理サービスです。EC2インスタンス、オンプレミスサーバーの一元管理、パッチ管理、構成管理、オペレーション自動化、セッション管理を提供します。エージェントベースで、AWS CloudWatch、AWS Config、AWS Lambda等と統合し、ハイブリッドクラウド環境の運... | [AWS_Systems_Manager.md](システム管理ツール/AWS_Systems_Manager.md) |
+
 ## セキュリティツール
 
 **ツール数**: 3
@@ -193,7 +206,7 @@
 
 ## テストツール
 
-**ツール数**: 10
+**ツール数**: 11
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
@@ -203,6 +216,7 @@
 | JUnit | JUnitは、Java言語のための最も広く使用されているユニットテストフレームワークです。2000年にKent BeckとErich Gammaによって開発され、テスト駆動開発（TDD）の普及に大きく貢献しました。JUnit 5（Jupiter）は最新版で、モダンなJava（Java 8以降）に対応し、アノテーション駆動のテスト記述、パラメータ化テスト、拡張モデルなど強力な機能を提供します。 | [JUnit.md](テストツール/JUnit.md) |
 | Jest | Jestは、Meta（旧Facebook）が開発したJavaScript/TypeScriptのための包括的なテストフレームワークです。ゼロコンフィグで動作し、高速な並列テスト実行、組み込みのモック機能、スナップショットテスト、コードカバレッジレポートなど、モダンなフロントエンド開発に必要な機能を全て備えています。React、Vue.js、Angular等の主要フレームワークに対応し、特にReac... | [Jest.md](テストツール/Jest.md) |
 | Locust | Locustは、Pythonで記述するオープンソースの負荷テスト・パフォーマンステストツールです。Pythonコードでユーザー挙動を定義することで、柔軟で強力なテストシナリオを作成できます。分散実行により数百万の同時ユーザーをシミュレートでき、WebベースのリアルタイムUIでテスト結果を可視化します。開発者フレンドリーなコードベースのアプローチが特徴です。 | [Locust.md](テストツール/Locust.md) |
+| Playwright | Playwright は、Microsoft が開発したオープンソースのブラウザ自動化・E2E（End-to-End）テストフレームワークです。Chromium、Firefox、WebKit（Safari）をサポートし、クロスブラウザテストを単一の API で実行できます。高速で信頼性の高い自動テスト、自動待機機能、強力なデバッグツールにより、モダンな Web アプリケーションのテスト自動化を効率... | [Playwright.md](テストツール/Playwright.md) |
 | REST Assured | REST Assuredは、JavaでREST APIのテストを容易にするオープンソースライブラリです。流暢なAPI（Fluent API）により、HTTPリクエストの送信とレスポンスの検証をシンプルかつ可読性高く記述できます。JUnit、TestNG等のテストフレームワークと統合し、CI/CDパイプラインでのAPI自動テストに最適です。 | [REST_Assured.md](テストツール/REST_Assured.md) |
 | Selenium | Seleniumは、Webブラウザの自動化を行うオープンソースのテスティングフレームワークです。実際のブラウザ（Chrome、Firefox、Safari、Edge等）を操作してE2E（エンドツーエンド）テストを実行できます。2004年に登場して以来、業界標準のブラウザ自動化ツールとして広く利用されており、Java、Python、C#、Ruby、JavaScript等の複数言語をサポートしています... | [Selenium.md](テストツール/Selenium.md) |
 | Vitest | Vitestは、Vite対応の超高速ユニットテストフレームワークです。Viteの高速なHMR（Hot Module Replacement）とトランスフォーム機能を活用し、Jestと互換性のあるAPIを提供しながら、TypeScript、JSX、ESMをネイティブサポートします。Viteプロジェクトとのシームレスな統合により、開発体験を損なわずにテストを実行できます。 | [Vitest.md](テストツール/Vitest.md) |
@@ -271,6 +285,14 @@
 |----------|------|----------|
 | Git | Gitは、分散型バージョン管理システム（DVCS: Distributed Version Control System）です。Linus Torvalds氏によって開発され、ソフトウェア開発におけるソースコードの変更履歴を追跡・管理します。ブランチ・マージ機能により、複数開発者が並行して作業でき、GitHub、GitLab、Bitbucket等のホスティングサービスと組み合わせることで、チーム開... | [Git.md](バージョン管理ツール/Git.md) |
 
+## フレームワークツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| AWS Well-Architected Framework | AWS Well-Architected Frameworkは、Amazon Web Services公式のクラウドアーキテクチャベストプラクティス集です。6つの柱（運用の優秀性、セキュリティ、信頼性、パフォーマンス効率、コスト最適化、持続可能性）に基づき、AWSワークロードの設計・運用を評価し、リスク特定、改善推奨事項、アーキテクチャレビューを提供します。Well-Architected Too... | [AWS_Well-Architected_Framework.md](フレームワークツール/AWS_Well-Architected_Framework.md) |
+
 ## プロジェクト管理ツール
 
 **ツール数**: 4
@@ -298,6 +320,14 @@
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | OPA (Open Policy Agent) | OPA（Open Policy Agent）は、CNCF（Cloud Native Computing Foundation）のGraduatedプロジェクトである汎用ポリシーエンジンです。Rego言語でポリシーをコード化し、マイクロサービス、Kubernetes、CI/CD、API Gateway等のあらゆるレイヤーで統一的なポリシー管理を実現します。宣言的なポリシー定義により、認可、アドミッシ... | [OPA.md](ポリシー管理ツール/OPA.md) |
+
+## マイグレーションツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| AWS Database Migration Service (DMS) | AWS Database Migration Service（DMS）は、Amazon Web Services公式のデータベースマイグレーションサービスです。オンプレミス、AWS、他クラウド間でデータベース（Oracle、SQL Server、MySQL、PostgreSQL、MongoDB等）を最小ダウンタイムで移行し、同種・異種データベース間の移行、継続的データレプリケーション、データウェア... | [AWS_Database_Migration_Service.md](マイグレーションツール/AWS_Database_Migration_Service.md) |
 
 ## レポーティングツール
 
@@ -377,6 +407,14 @@
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Jama Connect | Jama Connectは、複雑な製品開発における要件管理・トレーサビリティプラットフォームです。システム要件、ソフトウェア要件、テストケースを一元管理し、要件から設計、実装、テストまでの双方向トレーサビリティを実現します。医療機器、自動車、航空宇宙等の規制産業で広く採用され、ISO 26262、IEC 62304、DO-178C等のコンプライアンスを支援します。 | [Jama_Connect.md](要件管理ツール/Jama_Connect.md) |
+
+## 設計ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| AWS CloudFormation Designer | AWS CloudFormation Designerは、Amazon Web Services公式のビジュアルテンプレートデザイナーです。ドラッグ&ドロップでCloudFormationテンプレート（JSON/YAML）を作成・編集し、AWSリソース（EC2、VPC、RDS、Lambda等）の関係を視覚的に設計します。既存テンプレートのインポート、リアルタイムプレビュー、テンプレートバリデーショ... | [AWS_CloudFormation_Designer.md](設計ツール/AWS_CloudFormation_Designer.md) |
 
 ## 開発ツール
 
