--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -5,7 +5,7 @@
 ## 統計
 
 - **カテゴリ数**: 40
-- **ツール総数**: 106
+- **ツール総数**: 109
 
 ## 目次
 
@@ -34,7 +34,7 @@
 - [バッチ処理ツール](#バッチ処理ツール) (1ツール)
 - [バージョン管理ツール](#バージョン管理ツール) (1ツール)
 - [フレームワークツール](#フレームワークツール) (1ツール)
-- [プロジェクト管理ツール](#プロジェクト管理ツール) (4ツール)
+- [プロジェクト管理ツール](#プロジェクト管理ツール) (7ツール)
 - [プロセスモデリングツール](#プロセスモデリングツール) (2ツール)
 - [ポリシー管理ツール](#ポリシー管理ツール) (1ツール)
 - [マイグレーションツール](#マイグレーションツール) (1ツール)
@@ -295,13 +295,16 @@
 
 ## プロジェクト管理ツール
 
-**ツール数**: 4
+**ツール数**: 7
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Asana | Asanaは、チームのタスク管理とプロジェクト管理を効率化するワークマネジメントプラットフォームです。直感的なUIと柔軟なビュー（リスト、ボード、タイムライン、カレンダー）により、様々な規模のプロジェクトを管理できます。 **主な特徴:** - 複数のプロジェクトビュー（リスト、ボード、タイムライン、カレンダー） - タスクの依存関係管理 - 自動化ルール（Rules） - ポートフォリオ管理 -... | [Asana.md](プロジェクト管理ツール/Asana.md) |
+| Backlog | Backlog は、株式会社ヌーラボが開発・提供する日本発のプロジェクト管理・コラボレーションツールです。課題管理（Issue Tracking）、Git/Subversion によるバージョン管理、Wiki、ガントチャート、バーンダウンチャートを統合し、開発チームから非エンジニアまで直感的に使えるUI/UXを提供します。日本語に完全対応し、国内企業に最適化された機能により、170万人以上のユーザ... | [Backlog.md](プロジェクト管理ツール/Backlog.md) |
 | ClickUp | ClickUpは、プロジェクト管理、タスク管理、ドキュメント作成、時間追跡、チャットを統合したオールインワン生産性プラットフォームです。「Replace them all（すべてを置き換える）」をコンセプトに、複数のツールを1つに集約し、カスタマイズ可能なワークスペースでチームのあらゆる業務を管理します。アジャイル、ウォーターフォール、GTD等、多様な手法に対応します。 | [ClickUp.md](プロジェクト管理ツール/ClickUp.md) |
 | JIRA | JIRA（ジラ）は、Atlassian社が開発したプロジェクト管理・課題管理ツールです。元々はバグトラッキングシステムとして開発されましたが、現在はアジャイル開発（スクラム、カンバン）、DevOps、IT運用管理など、幅広いプロジェクト管理に対応しています。チケット（課題）ベースの管理により、タスクの可視化、進捗追跡、チーム間のコラボレーションを効率化します。カスタマイズ性が高く、ワークフロー、フ... | [JIRA.md](プロジェクト管理ツール/JIRA.md) |
+| monday.com | monday.com（モンデードットコム）は、イスラエル発のクラウドベースの Work OS（Work Operating System）プラットフォームです。2012年に dapulse として創業し、2017年に monday.com に改名。カラフルで直感的なビジュアルと高い柔軟性により、プロジェクト管理、CRM、マーケティング、開発など、あらゆる業務プロセスを一元管理できます。ノーコードで... | [Monday.md](プロジェクト管理ツール/Monday.md) |
+| Notion | Notion は、サンフランシスコに本社を置く Notion Labs が提供するオールインワンのワークスペース・コラボレーションツールです。ノート、タスク管理、Wiki、データベース、カレンダーを統合し、「コネクテッドワークスペース」として個人からチームまで、情報管理とプロジェクト管理を一元化します。ブロックベースの柔軟なエディタ、リレーショナルデータベース、豊富なテンプレートにより、世界中で3... | [Notion.md](プロジェクト管理ツール/Notion.md) |
 | Trello | Trelloは、カンバンボード形式のビジュアルプロジェクト管理ツールです。2011年にFog Creek Softwareからリリースされ、2017年にAtlassian社に買収されました。直感的なドラッグ&ドロップ操作により、タスクを「カード」として管理し、「リスト」間で移動させることで進捗を可視化します。シンプルで使いやすいUIが特徴で、ソフトウェア開発だけでなく、マーケティング、人事、イベン... | [Trello.md](プロジェクト管理ツール/Trello.md) |
 
 ## プロセスモデリングツール
